fixture of alignment

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -358,6 +358,7 @@ a {
         transform: translateX(-50%);
         text-align: center;
         width: 70vw;
+        justify-content: center;
     }
 
     .service__card {
